--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -42,11 +42,11 @@ a {
   // }
 }
 
-.section-change {
-  // #logo-sf-text {
-  //   transition: color 450ms ease-in;
-  // }
-}
+// .section-change {
+//   #logo-sf-text {
+//     transition: color 450ms ease-in;
+//   }
+// }
 
 .header-element-color {
   color: $main-ivory;
